# university_visitor_system

./: .dockerignore  .env  .env.example  .flake8  .gitignore  AUTO_CHECKIN_CHECKOUT_FEATURE.md  AUTO_CHECKIN_CHECKOUT_IMPLEMENTATION.md  CALENDAR_README.md  CELERY_HIKVISION_FIX.md  CELERY_QUICK_START.md  CELERY_WORKERS_FIX.md  CRITICAL_FEATURES_IMPLEMENTATION.md  DASHBOARD_ACCESS_LEVELS.md  DASHBOARD_FINAL_REPORT.md  DASHBOARD_IMPLEMENTATION_PROGRESS.md  DASHBOARD_TABLER_REDESIGN.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FEATURES_IMPLEMENTATION_REPORT.md  FIELD_ERROR_FIX.md  FIELD_NOT_EXIST_FIX.md  FINAL_ANSWER_AUTOMATION.md  FINAL_INTEGRATION_REPORT.md  HCP_SAFETY_SECURITY_AUDIT.md  HIKCENTRAL_AUTH_FIX.md  HIKVISION_BUGS_FIXED.md  HIKVISION_GAPS_ANALYSIS.md  HIKVISION_OPTIMIZATION_FINAL_REPORT.md  HIKVISION_SERVICES_OPTIMIZATION_REPORT.md  HIKVISION_WORKER_GUIDE.md  HIKVISION_WORKER_SETUP.md  HTMX_IMPROVEMENTS.md  LEGACY_ISAPI_MULTIPART_REMOVAL.md  LEGACY_ISAPI_STATUS.md  LICENSE  LOGGING_FIX_WINDOWS.md  LOGGING_SECURITY_AUDIT_REPORT.md  MANUAL_UI_IMPLEMENTATION_GUIDE.md  MANUAL_UI_QUICK_START.md  MULTIPART_REMOVAL_REPORT.md  (+51 more)
.cursor/rules/: Protocol_Summary.mdc
.github/workflows/: ci.yml  django-ci.yml  docker-build.yml
docs/: CI_CD_PIPELINE.md
docs/operations/: DEPLOYMENT_CHECKLIST.md  HIKCENTRAL_TLS.md  RUNBOOKS.md  SECRET_MANAGEMENT.md  SECRET_ROTATION_LOG.md
grafana/dashboards/: django-overview.json
nginx/: nginx.conf
nginx/certs/: nginx-selfsigned.crt  nginx-selfsigned.key
templates/: _base_error.html  base.html  base_clean.html  manifest.json  offline.html  sw.js
templates/account/: login.html  loginold.html
templates/calendar/: debug.html  view.html
templates/classroom/: booking_form.html  booking_success.html  classroom_list.html  help.html  index.html  my_bookings.html
templates/errors/: 403.html  500.html  error.html  offline.html
templates/notifications/: visit_notification.txt  webpush_settings.html
templates/registration/: login.html
templates/visitors/: _register_guest_form_block.html  _register_student_form_block.html  _visit_row.html  _visit_table.html  _visit_table_block.html  admin_dashboard.html  auto_checkin_dashboard.html  current_guests.html  employee_dashboard.html  guest_invitation_already_filled.html  guest_invitation_create.html  guest_invitation_fill.html  guest_invitation_fill_beautiful.html  guest_invitation_filled_success.html  guest_invitation_finalize.html  guest_invitation_form.html  hikcentral_dashboard.html  htmx_demo.html  profile_setup.html  qr_scan.html  register_group_visit.html  register_guest.html  register_student_visit.html  security_incidents_dashboard.html  student_visit_detail.html  visit_detail.html  visit_history.html  visit_history_sorting.js  visit_statistics.html
visitor_system/: .dockerignore  .env  FINAL_ANSWER_AUTOMATION.md  HIKCENTRAL_PHOTO_UPLOAD_SOLUTION.md  OPTIMIZATION_README.md  PHOTO_UPLOAD_FINAL_REPORT.md  README.md  WEBPUSH_DOCUMENTATION.md  celerybeat-schedule-shm  celerybeat-schedule-wal  cert.crt  cert.key  check_env.py  check_guest_photo.py  check_invitations.py  check_invitations_status.py  check_person_binding.py  check_task_errors.py  check_users_invitations.py  check_webpush_setup.py  db.sqlite3  db.sqlite3-shm  debug_dashboard.py  docker-compose.yml  docker-compose.yml.new  entrypoint.sh  fix_vapid_key.py  generate_vapid_keys.py  manage.py  new_employee_dashboard.py  optimization_guide.py  populate_classrooms.py  pyproject.toml  setup_admin_webpush.py  test_celery_connection.py  test_full_guest_flow.py  test_photo_upload_194.py  test_vapid.py  test_vapid_conversion.py  test_webpush_send.py  (+4 more)
visitor_system/authentication/: adapter.py  admin.py  models.py  signals.py  urls.py  views.py
visitor_system/classroom_book/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
visitor_system/departments/: admin.py  models.py
visitor_system/egov_integration/: __init__.py  admin.py  admin_backup.py  apps.py  example.env  models.py  services.py  setup_api_key.py  setup_guide.md  simple_test.py  test_api.py  urls.py  views.py
visitor_system/fullcalendar/: api_views.py  urls.py
visitor_system/hikvision_integration/: AccessControlAPI.md  FINAL_SAFETY_OPTIMIZATION_REPORT.md  OPTIMIZATION_DEPLOYMENT_GUIDE.md  TASKS_OPTIMIZATION_ANALYSIS.md  TASKS_OPTIMIZATION_REPORT.md  admin.py  apps.py  config.py  examples.py  metrics.py  models.py  rate_limiter.py  safety_config.py  safety_utils.py  services.py  tasks.py  urls.py  utils.py  views.py
visitor_system/nginx/: nginx.conf
visitor_system/notifications/: admin.py  apps.py  models.py  (+4 more)
(+253 files in other folders)
