[tool.poetry]
name = "university pass system for aitu"
version = "0.1"
description = ""
authors = ["Sagat Akimbay"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.0"
django-allauth = "^65.7.0"
requests = "^2.32.3"
pillow = "^11.2.1"
python-dotenv = "^1.1.0"
pyopenssl = "^25.0.0"
werkzeug = "^3.1.3"
django-extensions = "^4.1"
django-select2 = "^8.4.0"
django-filter = "^25.1"
openpyxl = "^3.1.5"
celery = "^5.5.1"
redis = "^5.2.1"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.10"
pyngrok = "^7.2.5"
gunicorn = "^23.0.0"
django-pwa = "^2.0.1"
django-widget-tweaks = "^1.5.0"
faker = "^37.3.0"
whitenoise = "^6.9.0"
django-debug-toolbar = "^5.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^24.0.0"
isort = "^5.13.2"
pytest = "^8.3.1"
pytest-django = "^4.9.0"
coverage = "^7.6.9"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "visitor_system.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["visitor_system"]
addopts = "--tb=short --strict-markers"

[tool.coverage.run]
source = "."
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    "migrations/",
    "venv/",
    "env/",
]
